--- a/css/dropdown-style.css
+++ b/css/dropdown-style.css
@@ -1,5 +1,6 @@
 .Dropdown {
   position: relative;
+  width: 20%;
 }
 
 .Dropdown-control {
@@ -12,7 +13,7 @@
   color: #333;
   cursor: default;
   outline: none;
-  padding: 8px 52px 8px 10px;
+  padding: 4px 52px 4px 10px;
   transition: all 200ms ease;
 }
 
@@ -30,7 +31,7 @@
   margin-top: -ceil(2.5);
   position: absolute;
   right: 10px;
-  top: 14px;
+  top: 12px;
   width: 0
 }
 
@@ -66,7 +67,7 @@
   color: rgba(51, 51, 51, 0.8);
   cursor: pointer;
   display: block;
-  padding: 8px 10px;
+  padding: 4px 10px;
 }
 
 .Dropdown-option:last-child {
@@ -89,5 +90,5 @@
   color: #ccc;
   cursor: default;
   display: block;
-  padding: 8px 10px;
+  padding: 4px 10px;
 }
