--- a/css/my-style.css
+++ b/css/my-style.css
@@ -14,3 +14,8 @@ h2 {
     from {background-color: orange;}
     to {background-color: white;}
 }
+
+.sidebar {
+  background-color: lightblue;
+  height: 90vh;
+}
